# op-claude-plugins

./: .gitignore  README.md  logs.sh  main.py  pyproject.toml  start.sh
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
op-skills/.claude-plugin/: plugin.json
op-skills/skills/check-dispute-game-validity/: SKILL.md
op-skills/skills/check-node-health/: SKILL.md
op-skills/skills/check-op-node-safe-head-db/: SKILL.md
op-skills/skills/check-op-stack-skill-setup/: SKILL.md
op-skills/skills/find-mips-contract-address/: SKILL.md
op-skills/skills/get-chain-config/: SKILL.md  get-chain-config.sh
op-skills/skills/get-contract-abi/: SKILL.md  get-abi.sh
op-skills/skills/get-contracts-version-and-upgrade-number/: SKILL.md
op-skills/skills/get-dispute-game-constants/: SKILL.md  get-dispute-game-constants.sh
op-skills/skills/get-dispute-game-details/: SKILL.md
op-skills/skills/get-prestates/: SKILL.md  get-prestates.sh
op-skills/skills/get-specs-documentation/: SKILL.md  get-specs-page.sh
op-skills/skills/list-recent-dispute-games/: SKILL.md
op-skills/skills/list-rpc-urls/: SKILL.md  list-l1-rpc-urls.sh  list-l2-rpc-urls.sh  list-network-values.sh
op-skills/skills/verify-dispute-game-absolute-prestate/: SKILL.md
recipes/: check-dispute-game-validity.md  check-node-health.md  check-op-node-safe-head-db.md  find-mips-contract-address.md  get-dispute-game-details.md  list-recent-dispute-games.md  verify-dispute-game-absolute-prestate.md
scripts/: list_network_values.sh
src/: __init__.py  op_mcp_server.py
