[project]
name = "op-mcp-server"
version = "0.1.0"
description = "MCP Server for interacting with OP Stack blockchains"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.24.0",
    "mcp>=1.0.0",
    "toml>=0.10.2",
]

[tool.uv]
# Compile Python files for faster startup
compile-bytecode = true
# Use highest resolution strategy for dependencies
resolution = "highest"
